{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 27,
  "lineage": "4da53ede-c798-098f-19b9-e20146c29516",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:security-group/sg-0051beca42ebcab04",
            "description": "Security group for OpenSearch domain",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0051beca42ebcab04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "movie-finder-dev-opensearch-sg",
            "name_prefix": "",
            "owner_id": "248189900772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-opensearch-sg",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-opensearch-sg",
              "Project": "movie-finder"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:security-group/sg-0da163502f5ce4973",
            "description": "Security group for Redis cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da163502f5ce4973",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "movie-finder-dev-redis-sg",
            "name_prefix": "",
            "owner_id": "248189900772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-redis-sg",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-redis-sg",
              "Project": "movie-finder"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:network-acl/acl-0cbc6a5a430c1f9a7",
            "default_network_acl_id": "acl-0cbc6a5a430c1f9a7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cbc6a5a430c1f9a7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "248189900772",
            "subnet_ids": [
              "subnet-03cb866210994c7b7",
              "subnet-0456e561cee4340cc",
              "subnet-072bda0816664fb13",
              "subnet-09c4694d79dacf348"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-default",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-default",
              "Project": "movie-finder"
            },
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:route-table/rtb-0ee66ca434f16cc5e",
            "default_route_table_id": "rtb-0ee66ca434f16cc5e",
            "id": "rtb-0ee66ca434f16cc5e",
            "owner_id": "248189900772",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-default",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-default",
              "Project": "movie-finder"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:security-group/sg-064a181d718680c32",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-064a181d718680c32",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "248189900772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-default",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-default",
              "Project": "movie-finder"
            },
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef9d8a0fd6048773",
            "arn": "arn:aws:ec2:us-east-1:248189900772:elastic-ip/eipalloc-0ef9d8a0fd6048773",
            "association_id": "eipassoc-06562570cdc1097f9",
            "domain": "vpc",
            "id": "eipalloc-0ef9d8a0fd6048773",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0eb887f36a6718204",
            "private_dns": "ip-10-0-101-113.ec2.internal",
            "private_ip": "10.0.101.113",
            "public_dns": "ec2-35-173-77-127.compute-1.amazonaws.com",
            "public_ip": "35.173.77.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-us-east-1a",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-us-east-1a",
              "Project": "movie-finder"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:internet-gateway/igw-04ef62d29590b0265",
            "id": "igw-04ef62d29590b0265",
            "owner_id": "248189900772",
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc",
              "Project": "movie-finder"
            },
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef9d8a0fd6048773",
            "association_id": "eipassoc-06562570cdc1097f9",
            "connectivity_type": "public",
            "id": "nat-026a5f0cc4037b665",
            "network_interface_id": "eni-0eb887f36a6718204",
            "private_ip": "10.0.101.113",
            "public_ip": "35.173.77.127",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-072bda0816664fb13",
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-us-east-1a",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-us-east-1a",
              "Project": "movie-finder"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-085b395128b7144c61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-026a5f0cc4037b665",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-085b395128b7144c6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04ef62d29590b0265",
            "id": "r-rtb-01d3fe74b84708fcf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01d3fe74b84708fcf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:route-table/rtb-085b395128b7144c6",
            "id": "rtb-085b395128b7144c6",
            "owner_id": "248189900772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-026a5f0cc4037b665",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-private",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-private",
              "Project": "movie-finder"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:route-table/rtb-01d3fe74b84708fcf",
            "id": "rtb-01d3fe74b84708fcf",
            "owner_id": "248189900772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ef62d29590b0265",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-public",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-public",
              "Project": "movie-finder"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abdd6abfc672d5d5",
            "route_table_id": "rtb-085b395128b7144c6",
            "subnet_id": "subnet-03cb866210994c7b7"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02695ed7119a30e87",
            "route_table_id": "rtb-085b395128b7144c6",
            "subnet_id": "subnet-09c4694d79dacf348"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5b2256802822cbd",
            "route_table_id": "rtb-01d3fe74b84708fcf",
            "subnet_id": "subnet-072bda0816664fb13"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0143d3586b1009cfb",
            "route_table_id": "rtb-01d3fe74b84708fcf",
            "subnet_id": "subnet-0456e561cee4340cc"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:subnet/subnet-03cb866210994c7b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cb866210994c7b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248189900772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-private-us-east-1a",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-private-us-east-1a",
              "Project": "movie-finder"
            },
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:subnet/subnet-09c4694d79dacf348",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c4694d79dacf348",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248189900772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-private-us-east-1b",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-private-us-east-1b",
              "Project": "movie-finder"
            },
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:subnet/subnet-072bda0816664fb13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072bda0816664fb13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248189900772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-public-us-east-1a",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-public-us-east-1a",
              "Project": "movie-finder"
            },
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:subnet/subnet-0456e561cee4340cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0456e561cee4340cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248189900772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-public-us-east-1b",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc-public-us-east-1b",
              "Project": "movie-finder"
            },
            "vpc_id": "vpc-0fac99c3a94cd61e8"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248189900772:vpc/vpc-0fac99c3a94cd61e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cbc6a5a430c1f9a7",
            "default_route_table_id": "rtb-0ee66ca434f16cc5e",
            "default_security_group_id": "sg-064a181d718680c32",
            "dhcp_options_id": "dopt-03972a11c1b61e958",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fac99c3a94cd61e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee66ca434f16cc5e",
            "owner_id": "248189900772",
            "tags": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc",
              "Project": "movie-finder"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "movie-finder-dev-vpc",
              "Project": "movie-finder"
            }
          }
        }
      ]
    }
  ]
}